<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/takeImage"
        android:title="@string/take_image"
        android:icon="@drawable/ic_action_camera_alt"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/imageUpload"
        android:title="@string/upload_image"
        android:icon="@drawable/ic_action_file_upload"
        app:showAsAction="ifRoom"/>
</menu>