<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

        <ImageView
            tools:ignore="ContentDescription"
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_centerInParent="true"/>

        <ImageView
            tools:ignore="ContentDescription"
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:padding="12dp"
            android:background="@drawable/circle"
            android:alpha="0"
            android:src="@drawable/ic_action_share"/>

</android.support.v7.widget.CardView>