...
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="forgot_password_message">Forgot password?\nSubmit your email to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="password_reset_instructions">Password reset instructions sent to email!</string>
    <string name="email_not_found">Email not found!</string>
    <string name="skip_login">Skip login</string>
    <string name="only_for_logged_in">Only for logged in users!</string>
    <string name="guest">Guest</string>
    <string name="empty" />
    <string name="we_are_sorry">We\'re Sorry</string>
    <string name="error_check_internet_connection">There was an error loading your content. Please check your internet connection and try again.</string>
    <string name="error_check_internet_connection_maps">There was an error loading content for Google Maps. Please check your internet connection and try again. Or continue without Google Places. </string>
    <string name="show_notifications">Show notifications</string>
...
